<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.fragments.AddJoggingEntry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/date"
                android:textColor="@color/dark_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hollow_bg_grey"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="10"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addDateView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/filled_grey_right_round"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/image_place_holder_text"
                        android:src="@drawable/ic_baseline_date_range_24" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/time"
                android:textColor="@color/dark_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hollow_bg_grey"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="10"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/timeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addTimeView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/filled_grey_right_round"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/image_place_holder_text"
                        android:src="@drawable/ic_baseline_access_time_24" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/distance"
                android:textColor="@color/dark_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hollow_bg_grey"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="7dp"
                android:weightSum="10"
                tools:ignore="UselessParent">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/distanceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=".0123456789"
                    android:hint="@string/enter_distance"
                    android:inputType="numberDecimal"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/distanceUnitGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/kiloMeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/kilo_meters"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/meters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/meters"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

            </RadioGroup>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/save"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>